# AviUtl-ImageMagick-File-Reader

./: Readme.md
src/: CMakeLists.txt  main.c  main.def  main.h
